@@ -73,6 +73,7 @@ Version 1.3.1+svn:
    * friendlier boolean matching for unit [filter] and unit [wml_filter]
    * fixed [special_filter] not working properly (#8212)
    * fixed [variables] not working properly for Multiplayer mode
+   * new [set_menu_item] action, to allow custom WML items in the context menu
  * user interface:
    * new sounds for user interface events
    * added the option to show warnings about deprecated WML usage
